--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,59 @@
-body {
-  background-color: red;
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
+}
+
+.main_container {
+  background: radial-gradient(27.53% 49.43% at 57.71% 56.54%, #b3c8c2 0%, #256e83 37.81%, #15394a 71.67%, #09111c 100%);
+  position: relative;
+  width: 100vw;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.main_container > img {
+  position: absolute;
+  height: 100%;
+}
+.main_container .title {
+  position: absolute;
+  color: white;
+  font-size: 7rem;
+  font-weight: 900;
+  top: 52%;
+}
+.main_container .frame_left {
+  left: 15%;
+  height: 132%;
+}
+.main_container .frame_leftright {
+  left: 18%;
+}
+.main_container .bush_left {
+  left: 15%;
+  height: 80%;
+  bottom: 0%;
+}
+.main_container .bush_right {
+  left: 18%;
+  height: 81%;
+  bottom: 0%;
+}
+.main_container .shadow {
+  position: absolute;
+  width: 30%;
+  height: 100%;
+}
+.main_container .shadow_left {
+  left: 0%;
+  background: linear-gradient(90deg, #000000 45%, rgba(0, 0, 0, 0) 68%);
+}
+.main_container .shadow_right {
+  right: 0%;
+  background: linear-gradient(270.2deg, #000000 44.95%, rgba(0, 0, 0, 0) 57.74%);
 }/*# sourceMappingURL=style.css.map */
